--- a/bower.json
+++ b/bower.json
@@ -34,6 +34,7 @@
   "devDependencies": {
     "web-component-tester": "*",
     "webcomponentsjs": "~0.7.14",
+    "t-radio-group": "atomelements/t-radio-group#0.0.0",
     "iron-component-page": "PolymerElements/iron-component-page#~1.0.6"
   }
 }
